[project]
name = "final-assignment-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-identity-broker>=1.3.0",
    "datasets>=5.0.0",
    "ddgs>=9.14.4",
    "gradio[oauth]>=6.18.0",
    "langchain>=1.3.8",
    "langchain-azure-ai>=1.2.3",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.29",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "wikipedia>=1.4.0",
    "youtube-search-python>=1.6.6",
]
